--- a/First/hypr/hyprland.conf
+++ b/First/hypr/hyprland.conf
@@ -30,6 +30,7 @@ $fileManager = thunar
 $menu = wofi --show drun
 # $browser = firefox
 $browser = librewolf
+$ffox = firefox
 $calculator = deepin-calculator
 
 #################
@@ -212,10 +213,6 @@ input {
     }
 }
 
-# https://wiki.hypr.land/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
 
 # Example per-device config
 # See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
@@ -235,13 +232,14 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, C, killactive,
-bind = $mainMod, X, exit,
+bind = $mainMod, Q, exit,
 bind = $mainMod, D, exec, $fileManager
 bind = $mainMod, W, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, exec, $browser
+bind = $mainMod, B, exec, $ffox
 bind = , Print, exec, grim -g "$(slurp)"
 bind = $mainMod, S, exec, steam
 
